--- a/openmhz_delayed_config.json
+++ b/openmhz_delayed_config.json
@@ -1,30 +1,34 @@
 {
-  "globalWatchDir": "/home/trunkrecorder/SDR/Recordings",
+  "globalWatchDir": "/home/ubuntu/Recordings",
   "systems": [
     {
       "systemName": "cachep25",
       "openmhzKey": "",
-      "uploadDelay": 300,
-      "talkgroupsToSkip": "1546"
+      "minFileAge": 5,
+      "uploadDelay": 500,
+      "talkgroupsToSkip": "1546,1542,1870,1548,1607,2261,587,598,703,708,1534,1540,1541,1542,1543,1549,1550,1551,1870,1871,1872,1873,1874,1875,1876,1877,1878,1879,1880,1881,1882,1883,1884,1885,1886,1887,1888,1889,1890,1891,1892,1893,1894,2015,2992,2993,2995,2996,2998,3000,3002,3004,3006,3007,3009,3011,3015,3021,3023,3024,3025,3032,3037,3040,3044,3046,3047,3048,3061,3071,3364,3365,3366,3367,3368,3369,3370,3371,3372,3373,3374,3375,3376,3377,3378,3379,3381,3382,3383,3384,3385,3509,3521,3705,3706,4738,4739,4740,4741,4742,4743,4744,4745,4746,4747,4748,4750,4751,4756,4759,4766,4769,4925,4926,4927,4928,5140,5141,5142,5143,5144,5145,5146,5147,5148,5149,5151,5152,5153,5154,5155,5156,5157,5158,5159,5160,5161,5162,5164,5165,5166,5167,5168,5333,5334,5335,5540,5541,5542,5543,5988,5989,5990,5991,5992,5993,5994,5995,5996,5997,5999,6000,6001,6002,6003,6004,6009,6010,6011,6012,6014,6015,6017,6018,6020,6021,6023,6024,6026,6027,6029,6030,6035,6037,6038,6039,6042,6231,6232,6233,6271,6281,6282,6283,6284,6285,6286,6455,6456,6457,6458,6459,6460,7023,7024,7213,7214,7215,7216,7645,7879,7880,8044,8045,8046,8047,8427,8614,8620,8827,8828,8829,8830,9016,9317,9318,9319,9320,9321,9322"
     },
     {
       "systemName": "cacheham",
       "openmhzKey": "",
-      "uploadDelay": 5,
-      "talkgroupsToSkip": ""
+      "minFileAge": 5,
+      "uploadDelay": 15,
+      "talkgroupsToSkip": "449625,449325"
     },
     {
       "systemName": "cacheham2",
       "shortName": "cacheham",
       "openmhzKey": "",
-      "uploadDelay": 5,
-      "talkgroupsToSkip": ""
+      "minFileAge": 5,
+      "uploadDelay": 15,
+      "talkgroupsToSkip": "145210"
     },
     {
       "systemName": "cachegmrs",
       "shortName": "cacheham",
       "openmhzKey": "",
-      "uploadDelay": 5,
+      "minFileAge": 5,
+      "uploadDelay": 15,
       "talkgroupsToSkip": ""
     }
   ]
